# ECE-Scholarships

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  main.py  other.sh  pyoxidizer.bzl  pyproject.toml  requirements.txt  run.sh  test.sh
.github/: pull_request_template.md
.github/workflows/: main.yml
scholarship_app/: __main__.py  app.py  router.py
scholarship_app/components/home/: graphing.py  review.py  statistics.py
scholarship_app/components/import_data/: script_editor.py
scholarship_app/launcher/: app.py
scholarship_app/managers/: config.py
scholarship_app/managers/import_data/: alignment_settings.py  similar_columns.py
scholarship_app/managers/sharepoint/: file_versioning.py  master_data.py  sharepoint_session.py
scholarship_app/models/: imported_sheet.py
scholarship_app/pages/: account.py  download.py  export.py  home.py  import.py  login.py  scholarship_management.py  student_metrics.py  winners.py
scholarship_app/sessions/: import_session_manager.py  session_manager.py
scholarship_app/utils/: html.py  merge.py  output.py  scholarship_management.py  sharepoint.py
scholarships/: scholarships.xlsx
scripts/: lint.sh  playwright.sh  pyunit.sh  test.sh
src/: home.py  main.py
src/components/import_data/: script_editor.py
src/managers/: alignment_settings.py  app_data.py
src/managers/import_data/: alignment_settings.py  similar_columns.py
src/managers/sharepoint/: sharepoint_session.py
src/models/: imported_sheet.py
src/pages/: Scholarship Management.py  about.py  account.py  download.py  download_file.py  export.py  home.py  import.py  login.py  scholarship_management.py  student_metrics.py  winners.py
src/pages/saml/: settings.json
src/sessions/: import_session_manager.py  session_manager.py
src/utils/: cookies.py  html.py  merge.py  output.py  scholarship_management.py  sharepoint.py
tests/: __init__.py  cli.py  playwright_example.py  pyunit_example.py  run.py
tests/data/: ECE School Applicants.xlsx  Test_User_Reviews.xlsx  ece_scholarship_applicants.xlsx  ece_school_applicants.xlsx  scholarships.xlsx  scholarships_test_file.xlsx  test.xlsx
tests/feature/: __init__.py  app_launches.py  conftest.py  download.py  export_data.py  graph_page.py  home.py  importing_data.py  login.py  playwright_example.py  scholarship_management.py
tests/feature/fixtures/: import_data.py  login.py
tests/feature/utils/: loading.py
tests/unit/: df_merge_utilities.py  pyunit_example.py  scholarship_management.py  sharepoint.py
tests/unit/test_utils/: output.py
