[tool.poetry]
name = "tbd"
version = "0.1.0"
description = "tbd"
authors = ["Brandon Egger <brandonegger64@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.17.0"
watchdog = "^2.2.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
pylint = "^2.16.1"
coverage = "^7.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
autohooks = "^23.1.0"
autohooks-plugin-pylint = "^22.8.1"
playwright = "^1.30.0"
pytest-playwright = "^0.3.0"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.pylint"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autohooks.plugins.pylint]
arguments = ["--rcfile=.pylintrc", "-s", "n"]
